--- a/front/src/components/Chat/Chat.module.scss
+++ b/front/src/components/Chat/Chat.module.scss
@@ -5,3 +5,42 @@
   background-color: #363a3f;
   height: 100vh;
 };
+
+.messages {
+  flex: 1;
+};
+
+.input {
+  color: #d3d3d3;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px;
+  border-radius: 5px;
+  margin: 20px;
+  border-top: 1px solid #808080;
+  background-color: #474b53;
+};
+
+.input > form > input {
+  padding: 15px;
+  background: transparent;
+  width: 100%;
+  border: none;
+  outline-width: 0;
+  color: #ffffff;
+  font-size: large;
+};
+
+.input > form {
+  flex: 1;
+};
+
+.inputButton {
+  display: none;
+};
+
+.inputIcons > .MuiSvgIcon-root {
+  padding: 5px;
+};
+
